vk.com: merge amp-vk and amp-vk-poll into single component

--- a/extensions/amp-vk/0.1/test/validator-amp-vk.html
+++ b/extensions/amp-vk/0.1/test/validator-amp-vk.html
@@ -27,14 +27,25 @@
 </head>
 <body>
   <h2>VK</h2>
-  <!-- Valid: Example of amp-vk usage -->
+  <!-- Valid: Example of amp-vk Post embed usage -->
   <amp-vk
       width="500"
       height="300"
       layout="responsive"
+      data-embedtype="post"
       data-owner_id="1"
       data-post_id="45616"
       data-hash="Yc8_Z9pnpg8aKMZbVcD-jK45eAk">
+  </amp-vk>
+
+  <!-- Valid: Example of amp-vk Poll embed usage -->
+  <amp-vk
+      width="400"
+      height="300"
+      layout="responsive"
+      data-embedtype="poll"
+      data-api_id="6183531"
+      data-poll_id="274086843_1a2a465f60fff4699f">
   </amp-vk>
 </body>
 </html>
