--- a/examples/vk.amp.html
+++ b/examples/vk.amp.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async custom-element="amp-vk" src="https://cdn.ampproject.org/v0/amp-vk-0.1.js"></script>
-  <script async custom-element="amp-vk-poll" src="https://cdn.ampproject.org/v0/amp-vk-poll-0.1.js"></script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
@@ -20,6 +19,7 @@
       width="500"
       height="300"
       layout="responsive"
+      data-embedtype="post"
       data-owner_id="1"
       data-post_id="45616"
       data-hash="Yc8_Z9pnpg8aKMZbVcD-jK45eAk">
@@ -31,6 +31,7 @@
       width="500"
       height="300"
       layout="fixed"
+      data-embedtype="post"
       data-owner_id="-26713492"
       data-post_id="430306"
       data-hash="A5jIarasOKe-f4mV7GQxXpct-wc">
@@ -43,6 +44,7 @@
         width="500"
         height="300"
         layout="flex-item"
+        data-embedtype="post"
         data-owner_id="-147845620"
         data-post_id="4910"
         data-hash="O_16NMAmlfCMbuPxU269ZjlmpEg">
@@ -53,23 +55,25 @@
 
   <h3>Layout: Fixed</h3>
 
-  <amp-vk-poll
+  <amp-vk
       width="400"
       height="300"
       layout="fixed"
+      data-embedtype="poll"
       data-api_id="6183531"
       data-poll_id="274086843_1a2a465f60fff4699f">
-  </amp-vk-poll>
+  </amp-vk>
 
   <h3>Layout: Responsive</h3>
 
-  <amp-vk-poll
+  <amp-vk
       width="400"
       height="300"
       layout="responsive"
+      data-embedtype="poll"
       data-api_id="6183531"
       data-poll_id="274086843_1a2a465f60fff4699f">
-  </amp-vk-poll>
+  </amp-vk>
 </div>
 </body>
 </html>
