--- a/examples/analytics-iframe-transport-remote-frame.html
+++ b/examples/analytics-iframe-transport-remote-frame.html
@@ -20,6 +20,8 @@
               console.log('The page at: ' + window.location.href +
                   ' has received an event: ' + event +
                   ' from the creative with transport ID: ' + transportId);
+              window.iframeTransportClient.sendMessageToCreative(
+                'example-3p-vendor', transportId, {'collected-data': 'abc'});
             });
       });
 
