vk.com: * rename attributes in order not to mix - and _ in data attributes * add cachebusting query comment

--- a/examples/vk.amp.html
+++ b/examples/vk.amp.html
@@ -20,8 +20,8 @@
       height="300"
       layout="responsive"
       data-embedtype="post"
-      data-owner_id="1"
-      data-post_id="45616"
+      data-owner-id="1"
+      data-post-id="45616"
       data-hash="Yc8_Z9pnpg8aKMZbVcD-jK45eAk">
   </amp-vk>
 
@@ -32,8 +32,8 @@
       height="300"
       layout="fixed"
       data-embedtype="post"
-      data-owner_id="-26713492"
-      data-post_id="430306"
+      data-owner-id="-26713492"
+      data-post-id="430306"
       data-hash="A5jIarasOKe-f4mV7GQxXpct-wc">
   </amp-vk>
 
@@ -45,8 +45,8 @@
         height="300"
         layout="flex-item"
         data-embedtype="post"
-        data-owner_id="-147845620"
-        data-post_id="4910"
+        data-owner-id="-147845620"
+        data-post-id="4910"
         data-hash="O_16NMAmlfCMbuPxU269ZjlmpEg">
     </amp-vk>
   </div>
@@ -60,8 +60,8 @@
       height="300"
       layout="fixed"
       data-embedtype="poll"
-      data-api_id="6183531"
-      data-poll_id="274086843_1a2a465f60fff4699f">
+      data-api-id="6183531"
+      data-poll-id="274086843_1a2a465f60fff4699f">
   </amp-vk>
 
   <h3>Layout: Responsive</h3>
@@ -71,8 +71,8 @@
       height="300"
       layout="responsive"
       data-embedtype="poll"
-      data-api_id="6183531"
-      data-poll_id="274086843_1a2a465f60fff4699f">
+      data-api-id="6183531"
+      data-poll-id="274086843_1a2a465f60fff4699f">
   </amp-vk>
 </div>
 </body>
