--- a/extensions/amp-vk/0.1/test/validator-amp-vk.html
+++ b/extensions/amp-vk/0.1/test/validator-amp-vk.html
@@ -33,8 +33,8 @@
       height="300"
       layout="responsive"
       data-embedtype="post"
-      data-owner_id="1"
-      data-post_id="45616"
+      data-owner-id="1"
+      data-post-id="45616"
       data-hash="Yc8_Z9pnpg8aKMZbVcD-jK45eAk">
   </amp-vk>
 
@@ -44,8 +44,8 @@
       height="300"
       layout="responsive"
       data-embedtype="poll"
-      data-api_id="6183531"
-      data-poll_id="274086843_1a2a465f60fff4699f">
+      data-api-id="6183531"
+      data-poll-id="274086843_1a2a465f60fff4699f">
   </amp-vk>
 </body>
 </html>
