Mediator.media as AMP-analytics vendor

--- a/examples/analytics-vendors.amp.html
+++ b/examples/analytics-vendors.amp.html
@@ -56,7 +56,7 @@
       <option>colanalytics</option>
       <option>comscore</option>
       <option>cxense</option>
-      <option>dynatrace</option>      
+      <option>dynatrace</option>
       <option>euleriananalytics</option>
       <option>facebook-pixel</option>
       <option>gemius</option>
@@ -67,6 +67,7 @@
       <option>linkpulse</option>
       <option>lotame</option>
       <option>mediametrie</option>
+      <option>mediator</option>
       <option>mparticle</option>
       <option>mpulse</option>
       <option>oewa</option>
@@ -557,6 +558,17 @@ For complete documentation and additional examples please see: https://marketing
 </amp-analytics>
 <!-- End Mediametrie example -->
 
+<!-- Mediator.media example -->
+<amp-analytics type="mediator" id="mediator">
+<script type="application/json">
+  {
+    "vars": {
+      "mediator_id": "ID"
+    }
+  }
+</script>
+</amp-analytics>
+<!-- End Mediator.media example -->
 
 <!-- mParticle tracking
   Ensure you replace AppKey with your Application key
