Factored out listener registration into module scope, allowing us to only register one listener per page.

--- a/examples/fluid.amp.html
+++ b/examples/fluid.amp.html
@@ -24,6 +24,6 @@
     <div style="margin-left: 35%; margin-right: 15%; border: 1px red solid">
       <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu0/iu1/iu2" height="fluid"></amp-ad>
     </div>
-    <!--<amp-ad type=doubleclick data-slot="/30497360/native_v2/iu7" height="fluid"></amp-ad>-->
+    <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu7" height="fluid"></amp-ad>
   </body>
 </html>
