--- a/validator/testdata/feature_tests/stamp_passing.html
+++ b/validator/testdata/feature_tests/stamp_passing.html
@@ -29,8 +29,8 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
-  <amp-story standalone>
-    <amp-story-page id="1">
+  <amp-story standalone related-articles="./related.json" background-audio="path/to/my.mp3">
+    <amp-story-page id="1" background-audio="path/to/my.mp3">
       <amp-story-grid-layer template="horizontal">
         <h5>
           <h1></h1>
