--- a/validator/testdata/feature_tests/stamp_error_reference_point.html
+++ b/validator/testdata/feature_tests/stamp_error_reference_point.html
@@ -1,4 +1,3 @@
-
 <!--
   Copyright 2017 The AMP HTML Authors. All Rights Reserved.
 
@@ -33,16 +32,10 @@
   <amp-story standalone related-articles="./related.json" background-audio="path/to/my.mp3">
     <amp-story-page id="1" background-audio="path/to/my.mp3" auto-advance-after="any-value">
       <amp-story-grid-layer template="horizontal">
-        <h5>
-          <h1></h1>
-          <h2></h2>
-        </h5>
-        <h3 grid-area="any value"></h3>
-      </amp-story-grid-layer>
-      <amp-story-grid-layer>
-        <h1></h1>
+        <img class="footer-logo" src="img/foot-logo.svg" width="40" height="40" /> <!-- The real error here is that <img/> tag is not allowed. But this is a weird use case where the validator error will comment about reference points. This needs to be fixed in the near future. -->
       </amp-story-grid-layer>
     </amp-story-page>
   </amp-story>
 </body>
 </html>
+
