--- a/extensions/amp-story/0.1/test/validator-amp-story-error.html
+++ b/extensions/amp-story/0.1/test/validator-amp-story-error.html
@@ -1,4 +1,3 @@
-
 <!--
   Copyright 2017 The AMP HTML Authors. All Rights Reserved.
 
@@ -16,7 +15,7 @@
 -->
 <!--
   Test Description:
-    This tests a STAMP page and should pass.
+  Tests for the amp-story tag.
 -->
 <!doctype html>
 <html ⚡>
@@ -27,22 +26,18 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-0.1.js"></script>
 </head>
 <body>
-  <amp-story standalone related-articles="./related.json" background-audio="path/to/my.mp3">
-    <amp-story-page id="1" background-audio="path/to/my.mp3" auto-advance-after="any-value">
-      <amp-story-grid-layer template="horizontal">
+  <amp-story> <!-- error because the 'standalone' attribute isn't set -->
+    <amp-story-page> <!-- error because the 'id' attribute isn't set -->
+      <amp-story-grid-layer> <!-- error because one of 'fill', 'horizontal', 'vertical', 'thirds' should be set. -->
         <h5>
           <h1></h1>
           <h2></h2>
         </h5>
-        <h3 grid-area="any value"></h3>
-      </amp-story-grid-layer>
-      <amp-story-grid-layer>
-        <h1></h1>
       </amp-story-grid-layer>
     </amp-story-page>
   </amp-story>
+  <div></div> <!-- this should create an error for the 'no siblings allowed' rule on <amp-story> -->
 </body>
 </html>
