--- a/extensions/amp-story/0.1/test/validator-amp-story-reference-point.html
+++ b/extensions/amp-story/0.1/test/validator-amp-story-reference-point.html
@@ -15,7 +15,7 @@
 -->
 <!--
   Test Description:
-    This tests a STAMP page and should pass.
+  Tests for the amp-story tag.
 -->
 <!doctype html>
 <html ⚡>
