AMP Story Validator Rules Fix

--- a/extensions/amp-story/0.1/test/validator-amp-story.html
+++ b/extensions/amp-story/0.1/test/validator-amp-story.html
@@ -38,7 +38,7 @@
         </h5>
         <h3 grid-area="any value"></h3>
       </amp-story-grid-layer>
-      <amp-story-grid-layer>
+      <amp-story-grid-layer template="horizontal">
         <h1></h1>
       </amp-story-grid-layer>
     </amp-story-page>
