--- a/examples/analytics-vendors.amp.html
+++ b/examples/analytics-vendors.amp.html
@@ -76,6 +76,7 @@
       <option>quantcast</option>
       <option>rakam</option>
       <option>segment</option>
+      <option>shinystat</option>
       <option>simplereach</option>
       <option>snowplow</option>
       <option>top100</option>
@@ -722,6 +723,19 @@ For complete documentation and additional examples please see: https://marketing
 }
 </script>
 </amp-analytics>
+
+<!-- Shinystat example -->
+<amp-analytics type="shinystat" id="shinystat">
+<script type="application/json">
+  {
+    "vars": {
+      "account": "ampshinystat",
+      "page": "Home page"
+    }
+  }
+</script>
+</amp-analytics>
+<!-- End Shinystat Example -->
 
 <!-- SimpleReach Tracking -->
 <amp-analytics type="simplereach" id="simplereach">
