--- a/examples/ima-video.amp.html
+++ b/examples/ima-video.amp.html
@@ -46,6 +46,17 @@
             <source src="https://s0.2mdn.net/4253510/google_ddm_animation_480P.mp4" type="video/mp4">
         </amp-ima-video>
     </div>
+    <h2>Custom Controls</h2>
+    <div id="player-wrapper">
+        <amp-ima-video id="myVideo"
+            autoplay
+            custom-controls
+            width="640" height="360" layout="responsive"
+            data-tag="https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/ad_rule_samples&ciu_szs=300x250&ad_rule=1&impl=s&gdfp_req=1&env=vp&output=vmap&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ar%3Dpremidpost&cmsid=496&vid=short_onecue&correlator="
+            data-poster="/examples/img/ima-poster.png">
+            <source src="https://s0.2mdn.net/4253510/google_ddm_animation_480P.mp4" type="video/mp4">
+        </amp-ima-video>
+    </div>
     <div class="spacer"></div>
 </body>
 </html>
