--- a/examples/analytics-iframe-transport-remote-frame.html
+++ b/examples/analytics-iframe-transport-remote-frame.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <title>Requests Frame</title>
     <script>
-      window.addEventListener('amp-iframeTransportClientCreated', () => {
-        /**
-         * To receive AMP analytics events in a third-party frame, you must
-         * pass a callback function to this method. The callback will be called
-         * when an event is received, and will be passed two parameters:
-         * @param {string} event A string of the format specified in the
-         * requests block of the amp-analytics JSON config
-         * @param {string} transportId An ID uniquely identifying which creative
-         * generated the event
-         */
-        window.iframeTransportClient.onAnalyticsEvent(
-            (event, transportId) => {
-              // Now, do something meaningful with the AMP Analytics event
-              console.log('The page at: ' + window.location.href +
-                  ' has received an event: ' + event +
-                  ' from the creative with transport ID: ' + transportId);
-              window.iframeTransportClient.sendMessageToCreative(
-                'example-3p-vendor', transportId, {'collected-data': 'abc'});
-            });
-      });
+      /**
+       * To receive analytics events in a third-party frame, you must
+       * implement this method, with this signature. Within that method, you
+       * must create a function which processes an event, and
+       * pass that function to the onAnalyticsEvent() method of the object
+       * which is passed as a parameter to onNewAmpAnalyticsInstance().
+       * @param ampAnalytics  Call onAnalyticsEvent() on this, passing your
+       * function which will receive the analytics events.
+       */
+      window.onNewAmpAnalyticsInstance = ampAnalytics => {
+        ampAnalytics.onAnalyticsEvent(event => {
+          // Now, do something meaningful with the AMP Analytics event
+          console.log('The page at: ' + window.location.href +
+              ' has received an event: ' + event);
+          // Optionally, you may send a response containing key/value pairs, to
+          // be used by the amp-ad-exit of the creative which generated the
+          // event.
+          ampAnalytics.sendResponseToCreative({'collected-data': 'abc'});
+        });
+      };
 
       // Load the script specified in the iframe’s name attribute:
       const url = JSON.parse(window.name).scriptSrc;
