--- a/examples/amp-position-observer.amp.html
+++ b/examples/amp-position-observer.amp.html
@@ -143,7 +143,8 @@
         id=myVideo
         title="Big Buck Bunny"
         artist="Blender Foundation"
-        poster="img/bigbuckbunny.jpg"
+        poster="img/bigbuckbunny-poster.jpg"
+        artwork="img/bigbuckbunny-artwork.jpg"
         album="The Peach Open Movie Project"
         src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
         width="720"
