--- a/examples/analytics-iframe-transport-remote-frame.html
+++ b/examples/analytics-iframe-transport-remote-frame.html
@@ -6,22 +6,26 @@
     <script>
       /**
        * To receive analytics events in a third-party frame, you must
-       * implement this method, with this signature. Within that method, you
-       * must create a function which processes an event, and
-       * pass that function to the onAnalyticsEvent() method of the object
-       * which is passed as a parameter to onNewAmpAnalyticsInstance().
-       * @param ampAnalytics  Call onAnalyticsEvent() on this, passing your
+       * implement window.onNewContextInstance, with this signature.
+       * @param context  Call onAnalyticsEvent() on this, passing your
        * function which will receive the analytics events.
        */
-      window.onNewAmpAnalyticsInstance = ampAnalytics => {
-        ampAnalytics.onAnalyticsEvent(event => {
+      window.onNewContextInstance = context => {
+        /**
+         * Within the window.onNewContextInstance method, you
+         * must create a function which processes an event, and
+         * pass that function to context.onAnalyticsEvent().
+         * @param {string} event The event message received from AMP Analytics
+         */
+        context.onAnalyticsEvent(event => {
           // Now, do something meaningful with the AMP Analytics event
           console.log('The page at: ' + window.location.href +
               ' has received an event: ' + event);
+
           // Optionally, you may send a response containing key/value pairs, to
           // be used by the amp-ad-exit of the creative which generated the
           // event.
-          ampAnalytics.sendResponseToCreative({'collected-data': 'abc'});
+          context.sendResponseToCreative({'collected-data': 'abc'});
         });
       };
 
@@ -31,7 +35,7 @@
         script = document.createElement('script');
         script.src = url;
         document.head.appendChild(script);
-        // The script will be loaded, and will call onNewAmpAnalyticsInstance()
+        // The script will be loaded, and will call onNewContextInstance()
       } else {
         console.warn('Received invalid URL - risk of XSS! ' + url);
       }
