--- a/examples/analytics-iframe-transport-remote-frame.html
+++ b/examples/analytics-iframe-transport-remote-frame.html
@@ -15,21 +15,17 @@
          * Within the window.onNewContextInstance method, you
          * must create a function which processes an event, and
          * pass that function to context.onAnalyticsEvent().
-         * @param {Object} event The event received from AMP Analytics
+         * @param {string} event The event message received from AMP Analytics
          */
         context.onAnalyticsEvent(event => {
-          if (event.type == 'iframe-transport-events') {
-            // Currently, this is the only event type, but others may exist in
-            // the future.
-            // Now, do something meaningful with the AMP Analytics event.
-            console.log('The page at: ' + window.location.href +
-                ' has received an event: ' + event.message);
+          // Now, do something meaningful with the AMP Analytics event
+          console.log('The page at: ' + window.location.href +
+              ' has received an event: ' + event);
 
-            // Optionally, you may send a response containing key/value pairs,
-            // to be used by the amp-ad-exit of the creative which generated the
-            // event.
-            context.sendResponseToCreative({'collected-data': 'abc'});
-          }
+          // Optionally, you may send a response containing key/value pairs, to
+          // be used by the amp-ad-exit of the creative which generated the
+          // event.
+          context.sendResponseToCreative({'collected-data': 'abc'});
         });
       };
 
