--- a/examples/doubleclick-rtc.amp.html
+++ b/examples/doubleclick-rtc.amp.html
@@ -29,6 +29,18 @@
             data-slot="/4119129/mobile_ad_banner"
             prerequest-callouts='{"vendors": {"fakeVendor": {"SLOT_ID": "1", "PAGE_ID": "1"}, "nonexistent-vendor": {"SLOT_ID": "1"}, "fakeVendor2": {"SLOT_ID": "1"}}, "urls": ["https://broken.zzzzzz"], "timeoutMillis": 100}'
             json='{"targeting":{"food":["burgers","chicken"]},"categoryExclusions":["health"],"tagForChildDirectedTreatment":0}'>
+    </amp-ad>
+    <amp-ad width="320" height="50"
+            type="doubleclick"
+            data-slot="/4119129/mobile_ad_banner"
+            prerequest-callouts='{"vendors": {"fakeVendor": {"SLOT_ID": "1", "PAGE_ID": "1"}, "nonexistent-vendor": {"SLOT_ID": "1"}, "fakeVendor2": {"SLOT_ID": "1"}}, "urls": ["https://a.com","https://b.com","https://c.com","https://d.com","https://e.com","https://f.com", "https://g.com"], "timeoutMillis": 100}'
+            json='{"targeting":{"food":["burgers","chicken"]},"categoryExclusions":["health"],"tagForChildDirectedTreatment":0}'>
+    </amp-ad>
+    <amp-ad width="320" height="50"
+            type="doubleclick"
+            data-slot="/4119129/mobile_ad_banner"
+            prerequest-callouts='{"vendors": {"fakeVendor": {"SLOT_ID": "1", "PAGE_ID": "1"}, "nonexistent-vendor": {"SLOT_ID": "1"}, "fakeVendor2": {"SLOT_ID": "1"}, "fakeVendor3": {}, "fakeVendor4": {},"fakeVendor5": {},"fakeVendor6": {},"fakeVendor7": {}}, "timeoutMillis": 100}'
+            json='{"targeting":{"food":["burgers","chicken"]},"categoryExclusions":["health"],"tagForChildDirectedTreatment":0}'>
   </amp-ad>
 </body>
 </html>
