swtich IDs to classes

--- a/examples/visual-tests/amp-list/amp-list.amp.html
+++ b/examples/visual-tests/amp-list/amp-list.amp.html
@@ -36,7 +36,7 @@
 <body>
 
   <h2>Overflowing</h2>
-  <amp-list id="list1" width="300" height="100"
+  <amp-list class="list1" width="300" height="100"
       src="./amp-list-data.json?RANDOM">
     <template type="amp-mustache">
       <div class="story-entry">
@@ -50,7 +50,7 @@
   </amp-list>
 
   <h2>Complete</h2>
-  <amp-list id="list2" width="300" height="130"
+  <amp-list class="list2" width="300" height="130"
       src="./amp-list-data.json?RANDOM">
     <template type="amp-mustache">
       <div class="story-entry">
