--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -100,6 +100,7 @@
         <option>contentad</option>
         <option>criteo</option>
         <option>csa</option>
+        <option>connatix</option>
         <option>custom</option>
         <option>dable</option>
         <option>directadvert</option>
@@ -544,6 +545,12 @@
       data-d="bm9uYmxvY2tpbmcuaW8="
       data-wid="218709"
       data-url="nonblocking.io">
+  </amp-ad>
+
+  <h2>Connatix</h2>
+  <amp-ad width="300" height="250"
+      type="connatix"
+      data-connatix={"data-connatix-token":"755145ed-72aa-4a35-bc6e-d5dcfb8837d2"}>
   </amp-ad>
 
   <h2>Criteo Passback</h2>
@@ -1300,7 +1307,7 @@
       data-pid="42266"
       layout="responsive">
   </amp-ad>
-
+  
   <h2>TripleLift</h2>
   <amp-ad width="297" height="410"
       type="triplelift"
