--- a/examples/doubleclick-rtc.amp.html
+++ b/examples/doubleclick-rtc.amp.html
@@ -20,10 +20,10 @@
     <amp-ad width="320" height="50"
             type="doubleclick"
             data-slot="/4119129/mobile_ad_banner"
-            rtc-config='{"vendors": {"fakeVendor": {"SLOT_ID": "1", "PAGE_ID": "1"}, "nonexistent-vendor": {"SLOT_ID": "1"}, "fakeVendor2": {"SLOT_ID": "1"}}, "urls": ["https://localhost:4443/posts?slot_id=1", "https://broken.zzzzzz"], "timeoutMillis": 500}'
+            rtc-config='{"vendors": {"fakeVendor": {"SLOT_ID": "1", "PAGE_ID": "1"}, "nonexistent-vendor": {"SLOT_ID": "1"}, "fakeVendor2": {"SLOT_ID": "1"}}, "urls": ["https://localhost:4443/posts?slot_id=1", "https://localhost:4443/abc?timeout=true", "https://broken.zzzzzz", "https://localhost:4443/zqq?slot_id=1"], "timeoutMillis": 500}'
             json='{"targeting":{"food":["burgers","chicken"]},"categoryExclusions":["health"],"tagForChildDirectedTreatment":0}'>
     </amp-ad>
-
+<!--
     <amp-ad width="320" height="50"
             type="doubleclick"
             data-slot="/4119129/mobile_ad_banner"
@@ -41,6 +41,6 @@
             data-slot="/4119129/mobile_ad_banner"
             rtc-config='{"vendors": {"fakeVendor": {"SLOT_ID": "1", "PAGE_ID": "1"}, "nonexistent-vendor": {"SLOT_ID": "1"}, "fakeVendor2": {"SLOT_ID": "1"}, "fakeVendor3": {}, "fakeVendor4": {},"fakeVendor5": {},"fakeVendor6": {},"fakeVendor7": {}}, "timeoutMillis": 100}'
             json='{"targeting":{"food":["burgers","chicken"]},"categoryExclusions":["health"],"tagForChildDirectedTreatment":0}'>
-  </amp-ad>
+  </amp-ad> -->
 </body>
 </html>
