--- a/examples/analytics-vendors.amp.html
+++ b/examples/analytics-vendors.amp.html
@@ -69,6 +69,8 @@
       <option>mediametrie</option>
       <option>mparticle</option>
       <option>mpulse</option>
+      <option>newrelic</option>
+      <option>nielsen</option>
       <option>nielsen-marketing-cloud</option>
       <option>oewa</option>
       <option>oewadirect</option>
@@ -606,6 +608,19 @@ For complete documentation and additional examples please see: https://marketing
 </script>
 </amp-analytics>
 <!-- End mParticle example -->
+
+<!-- New Relic example -->
+<amp-analytics type="newrelic" id="newrelic">
+<script type="application/json">
+  {
+    "vars": {
+      "appId": "555555",
+      "licenseKey": "2fffffffff"
+    }
+  }
+</script>
+</amp-analytics>
+<!-- End New Relic example -->
 
 <!-- Nielsen example -->
 <amp-analytics type="nielsen" id="nielsen">
