--- a/examples/amp-story/grid-layer-templates.html
+++ b/examples/amp-story/grid-layer-templates.html
@@ -16,6 +16,9 @@
       body {
         font-family: 'Roboto', sans-serif;
       }
+      amp-story-page {
+        background: white;
+      }
       .content {
         background: #f2f2f2;
         border: solid #ccc;
