--- a/examples/amp-story/helloworld.html
+++ b/examples/amp-story/helloworld.html
@@ -14,6 +14,9 @@
       body {
         font-family: 'Roboto', sans-serif;
       }
+      amp-story-page {
+        background: white;
+      }
       h1 {
         font-size: 2.875em;
         font-weight: normal;
