--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -152,6 +152,7 @@
         <option>plista</option>
         <option>polymorphicads</option>
         <option>popin</option>
+        <option>pubexchange</option>
         <option>pubmine</option>
         <option>pulsepoint</option>
         <option>purch</option>
@@ -1083,6 +1084,17 @@
       heights="(min-width:1907px) 39%, (min-width:1200px) 46%, (min-width:780px) 64%, (min-width:480px) 98%, (min-width:460px) 167%, 196%"
       data-mediaid="popin_amp">
   </amp-ad>
+
+  <h2>PubExchange</h2>
+  <amp-embed width="640" height="320"
+      heights="(max-width:480px) 400%, (max-width:650px) 100%, 75%"
+      layout="responsive"
+      type="pubexchange"
+      data-publication="test_publication"
+      data-moduleId="below_content"
+      data-moduleNum="2626"
+      data-test="true">
+  </amp-embed>
 
   <h2>Pubmine 300x250</h2>
   <amp-ad width="300" height="250"
