fix(amp-poool): fix wrong attributes naming

--- a/examples/amp-poool-custom.amp.html
+++ b/examples/amp-poool-custom.amp.html
@@ -75,17 +75,17 @@
       layout="responsive"
       width="150"
       height="80"
-      init="ZRGA3EYZ4GRBTSHREG345HGGZRTHZEGEH"
-      page-view="premium"
-      debug="true"
-      mode="excerpt"
-      percent="80"
-      post-container="#need-poool-custom"
-      force-widget="gift"
-      main-color="#ffc400"
-      background-color="#ffc400"
-      brand-logo="https://cdn.poool.fr/uploads/57ffab6c756a8cf24356d0c2/sudouest.jpg"
-      events="poool-custom-events">
+      data-init="ZRGA3EYZ4GRBTSHREG345HGGZRTHZEGEH"
+      data-page-view="premium"
+      data-debug="true"
+      data-poool-mode="excerpt"
+      data-poool="80"
+      data-post-container="#need-poool-custom"
+      data-force-widget="gift"
+      data-main-color="#ffc400"
+      data-background-color="#ffc400"
+      data-brand-logo="https://cdn.poool.fr/uploads/57ffab6c756a8cf24356d0c2/sudouest.jpg"
+      data-events="poool-custom-events">
     </amp-poool>
   </div>
 
