--- a/examples/amp-poool.amp.html
+++ b/examples/amp-poool.amp.html
@@ -75,8 +75,8 @@
       layout="responsive"
       width="150"
       height="80"
-      init="ZRGA3EYZ4GRBTSHREG345HGGZRTHZEGEH"
-      page-view="premium">
+      data-init="ZRGA3EYZ4GRBTSHREG345HGGZRTHZEGEH"
+      data-page-view="premium">
     </amp-poool>
   </div>
 
