--- a/validator/webextension/amp-validator.html
+++ b/validator/webextension/amp-validator.html
@@ -18,6 +18,9 @@ limitations under the License.
   <head>
     <link href="polymer.html" rel="import">
     <script src="https://cdn.ampproject.org/v0/validator.js"></script>
+    <script>
+      window.browser = window.browser || window.chrome;
+    </script>
     <style is="custom-style">
       body {
         background-color: #fff;
@@ -76,7 +79,7 @@ limitations under the License.
           properties: {
             extensionName: {
               type: String,
-              value: chrome.i18n.getMessage("extensionName"),
+              value: browser.i18n.getMessage("extensionName"),
             },
           },
         });
@@ -176,6 +179,12 @@ limitations under the License.
         Polymer({
           is: 'results-page',
           getIssue: function(item) {
+            var discoveryUrl =
+                'https://www.ampproject.org/docs/guides/discovery';
+            if (item.specUrl === discoveryUrl) {
+              return browser.i18n.getMessage("warningCanonicalDoesntLinkToAMP",
+                  [item.canonicalHref]);
+            }
             return amp.validator.renderErrorMessage(item);
           },
           hasResults: function(results) {
@@ -184,7 +193,7 @@ limitations under the License.
           properties: {
             emptyResultsText: {
               type: String,
-              value: chrome.i18n.getMessage("emptyResultsText"),
+              value: browser.i18n.getMessage("emptyResultsText"),
             },
             results: {
               type: Array,
@@ -227,13 +236,13 @@ limitations under the License.
             var errorsPage = this.$.errorsPage;
             errorsPage.results = errors;
             this.$.errorsTab.textContent =
-              chrome.i18n.getMessage("errorsTabText", [errors.length]);
+              browser.i18n.getMessage("errorsTabText", [errors.length]);
           },
           setWarnings: function(warnings) {
             var warningsPage = this.$.warningsPage;
             warningsPage.results = warnings;
             this.$.warningsTab.textContent =
-              chrome.i18n.getMessage("warningsTabText", [warnings.length]);
+              browser.i18n.getMessage("warningsTabText", [warnings.length]);
           },
         });
       </script>
@@ -254,14 +263,14 @@ limitations under the License.
           ready: function() {
             var toolbar = this.$.toolbar;
             var content = this.$.content;
-            chrome.tabs.query({active: true, currentWindow: true},
+            browser.tabs.query({active: true, currentWindow: true},
                 function(tabs) { processTab(tabs, toolbar, content); });
           },
         });
         function processTab(tabs, toolbar, content) {
           var url = tabs[0].url;
           var validationResult;
-          chrome.runtime.getBackgroundPage(function(backgroundPage) {
+          browser.runtime.getBackgroundPage(function(backgroundPage) {
             validationResult =
               JSON.parse(backgroundPage.sessionStorage.getItem(url));
             if (validationResult) {
