check for i-amphtml-ssr attribute

--- a/test/fixtures/images.html
+++ b/test/fixtures/images.html
@@ -112,7 +112,7 @@
   </p>
   <p>
     In a box case
-    <amp-img id="img8" src="/examples/img/sample.jpg" width=527 height=193 layout="responsive">
+    <amp-img id="img8" i-amphtml-ssr src="/examples/img/sample.jpg" width=527 height=193 layout="responsive">
       <img src="/examples/img/sample.jpg" width=527 height=193/>
     </amp-img>
   </p>
