--- a/extensions/amp-list/0.1/test/validator-amp-list.html
+++ b/extensions/amp-list/0.1/test/validator-amp-list.html
@@ -169,5 +169,11 @@
     load-more-bookmark="next">
     <button load-more-clickable></button>
   </amp-list>
+  <amp-list width=10 height=10
+    src="https://data.com/articles.json?ref=CANONICAL_URL"
+    load-more="manual"
+    load-more-bookmark="next">
+  <button></button>
+</amp-list>
 </body>
 </html>
