--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -2130,16 +2130,10 @@
       data-frame-id="_bda46cf5ac">
   </amp-ad>
 
-  <amp-ad width="320" height="600"
-          type="zucks"
-          data-adtype="native"
-          data-frame-id="_d93ea045ac">
-  </amp-ad>
-
-  <amp-ad width="320" height="600"
+  <amp-ad width="320" height="400"
           type="zucks"
           data-adtype="zoe"
-          data-frame-id="_6b8b1096c7"
+          data-frame-id="_29845b2931"
           data-zoe-multi-ad="true">
   </amp-ad>
 
