--- a/examples/accordion.amp.html
+++ b/examples/accordion.amp.html
@@ -33,14 +33,14 @@
 </head>
 <body>
   <button on="tap:AMP.setState({expandAc1: ''})">Expand item 1</button>
-  <button on="tap:AMP.setState({expandAc1: 'false'})">Collapse item 1</button>
+  <button on="tap:AMP.setState({expandAc1: false})">Collapse item 1</button>
   <header class="menu">
     <h3>MENU</h3>
     <nav>
       <ul>
         <li>
           <amp-accordion id="ac1" animate>
-            <section id="item1" on="expand:ac2.collapse(section='item2')" [expanded]="expandAc1">
+            <section id="item1" on="expand:ac2.collapse(section='item2'),AMP.setState({expandAc1: ''});collapse:AMP.setState({expandAc1: false})" [expanded]="expandAc1">
               <h1>Item 1 (Expanding it closes Item 2)</h1>
               <div>
                 <p>1A</p>
