--- a/examples/fluid.amp.html
+++ b/examples/fluid.amp.html
@@ -22,7 +22,7 @@
     <p>Tests a static image ad in an AMP page.</p>
     <div class="artificialfold"></div>
     <div id="narrow" style="margin-left: 35%; margin-right: 15%; border: 1px red solid">
-      <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu0/iu1/iu2" width=350 height=50 data-multi-size="fluid"></amp-ad>
+      <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu0/iu1/iu2" height="fluid" layout="fluid"></amp-ad>
     </div>
     <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu7" height="fluid" layout="fluid"></amp-ad>
   </body>
