--- a/tools/experiments/experiments.html
+++ b/tools/experiments/experiments.html
@@ -32,6 +32,10 @@
       color: #fff;
     }
 
+    h2 {
+      color: #147bc1;
+    }
+
     .content {
       margin: 16px;
       display: block;
@@ -66,6 +70,11 @@
 
     button {
       min-width: 60px;
+    }
+
+    #subdomain {
+      color: gray;
+      font-family: 'Courier New', Courier, monospace;
     }
 
     tr[data-on='0'] button {
@@ -160,23 +169,42 @@
   </section>
 
   <section class="desc">
+    <h2>Release channels</h2>
     <p>
-      The switches below will toggle experiments for all documents served through the
-      <a href="https://developers.google.com/amp/cache/">Google AMP Cache</a>;
-      that is, the cached copies of valid AMP content published to the web at
-      the cdn.ampproject.org domain. See the AMP project
-      <a href="https://www.ampproject.org/docs/reference/experimental.html">documentation</a>
-      to find out more about experiments, and how to activate them outside of
-      the Google AMP Cache (including in local development).
+      These switches control which release channel (prod, RC, or dev) of AMP JS
+      will be served through the <a href="https://developers.google.com/amp/cache/">Google AMP Cache</a>.
+    </p>
+  </section>
+
+  <section class="content">
+    <table id="channels-table" border=1></table>
+  </section>
+
+  <section class="desc">
+    <h2>Experiments</h2>
+    <p>
+      These switches toggle experiments for documents served at the <em>current subdomain</em>
+      of the <a href="https://developers.google.com/amp/cache/">Google AMP Cache</a>:
     </p>
 
+    <h4 id="subdomain">cdn.ampproject.org</h4>
+
+    <p>Enabling an experiment here will not enable it on other subdomains!</p>
+
     <p>
-      Please exercise caution. These experiments are not fully tested and might
+      <strong>Please exercise caution.</strong> These experiments are not fully tested and might
       contain bugs or have unexpected side effects. Please only activate them
       if you work on the <a href="https://github.com/ampproject/amphtml/">AMP Project</a>
       or plan to create AMP documents that use unreleased features for testing purposes.
     </p>
-  </section>
+
+    <p>
+      See the AMP project
+      <a href="https://www.ampproject.org/docs/reference/experimental.html">documentation</a>
+      to find out more about experiments, and how to activate them outside of
+      the Google AMP Cache (including in local development).
+    </p>
+    </section>
 
   <section class="content">
     <table id="experiments-table" border=1></table>
