Update validator note
Co-Authored-By: Sepand Parhami <sparhami@google.com>

--- a/extensions/amp-accordion/0.1/test/validator-amp-accordion.html
+++ b/extensions/amp-accordion/0.1/test/validator-amp-accordion.html
@@ -56,7 +56,7 @@
       <p>Even more awesome.</p>
     </section>
     <section [data-expand]="">
-      <h2>Section with bound [expanded] attribute</h2>
+      <h2>Section with bound [data-expand] attribute</h2>
       <amp-img src="/awesome.png" width="300" height="300"></amp-img>
     </section>
   </amp-accordion>
