Try/catch localStorage, support origin URLs.

--- a/tools/experiments/experiments.html
+++ b/tools/experiments/experiments.html
@@ -206,15 +206,15 @@
     <h2>Experiments</h2>
 
     <p>
-      Experiments can no longer be enabled on the top-level <strong>cdn.ampproject.org</strong> domain.
-      They must be toggled on the specific subdomain e.g. <strong>www-example-com.cdn.ampproject.org</strong>.
+      Experiments can no longer be enabled on the top-level <strong>cdn.ampproject.org/experiments.html</strong>.
+      They must be toggled on the specific subdomain e.g. <strong>www-example-com.cdn.ampproject.org/experiments.html</strong>.
     </p>
 
     <p>
-      Use the tool below to find the experiments page for a given google.com AMP viewer URL:
+      Find the AMP Cache experiments page for your source domain or AMP page URL:
     </p>
 
-    <input type="text" placeholder="Paste a google.com viewer URL here.">
+    <input type="text" placeholder="E.g. www.example.com">
     <button>Get experiments page link</button>
 
     <h4><a href="#"></a></h4>
