--- a/examples/visual-tests/amp-story/amp-story-live-story.html
+++ b/examples/visual-tests/amp-story/amp-story-live-story.html
@@ -6,7 +6,7 @@
     <script async custom-element="amp-story"
         src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
     <script async custom-element="amp-live-list" src="https://cdn.ampproject.org/v0/amp-live-list-0.1.js"></script>
-    <title>amp-story tooltip diff</title>
+    <title>amp-story live story diff</title>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -30,13 +30,7 @@
 
       <amp-story-page id="cover" data-sort-time="1552330790">
         <amp-story-grid-layer template="vertical">
-          <p>Page one of two</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
-
-      <amp-story-page id="page-1" data-sort-time="1552330791">
-        <amp-story-grid-layer template="vertical">
-          <p>Page two of two</p>
+          <p>Page one of one</p>
         </amp-story-grid-layer>
       </amp-story-page>
     </amp-story>
