--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -48,7 +48,7 @@
 
         <amp-story-grid-layer template="horizontal" style="padding-top: 240px">
           <amp-img
-            src="./img/merch-sticker.jpg"
+            src="./img/merch1.jpg"
             width="300"
             height="400"
             max-width="300"
@@ -72,7 +72,7 @@
           </div>
           <div grid-area="middle-third">
               <amp-img
-              src="./img/merch-sticker.jpg"
+              src="./img/merch1.jpg"
               width="300"
               height="400"
               max-width="300"
