--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -57,6 +57,13 @@
         </amp-story-grid-layer>
       </amp-story-page>
 
+      <amp-story-page id="page-2">
+          <amp-story-grid-layer template="vertical">            
+              <h1>Second Page</h1>
+              <p>This is the second page of this story.</p>          
+            </amp-story-grid-layer>
+        </amp-story-page>
+
     </amp-story>
   </body>
 </html>
