--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -53,7 +53,12 @@
             max-width="210"
             layout="fixed">
           </amp-img>
-          <amp-story-bling-link id="blink-1"></amp-story-bling-link>
+          <amp-story-bling-link
+            id="blink-1"
+            layout="fixed"
+            width="75px"
+            height="75px"
+          ></amp-story-bling-link>
         </amp-story-grid-layer>
       </amp-story-page>
 
