--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -53,12 +53,15 @@
             max-width="210"
             layout="fixed">
           </amp-img>
-          <amp-story-bling-link
-            id="blink-1"
-            layout="fixed"
-            width="75px"
-            height="75px"
-          ></amp-story-bling-link>
+          <div class="i-amphtml-story-bling-link-wrapper">
+              <amp-story-bling-link
+                id="blink-1"
+                layout="fixed"
+                width="75px"
+                height="75px">
+              </amp-story-bling-link>
+              <div class="i-amphtml-story-bling-link-pulse"></div>
+          </div>
         </amp-story-grid-layer>
       </amp-story-page>
 
