--- a/test/manual/loaders-new.amp.html
+++ b/test/manual/loaders-new.amp.html
@@ -2,7 +2,7 @@
 <html ⚡>
   <head>
     <meta charset="utf-8" />
-    <title>Loaders</title>
+    <title>New Loaders</title>
     <link rel="canonical" href="http://nonblocking.io/" />
     <meta
       name="viewport"
