Use [type=text/plain][target=amp-script] instead.

--- a/examples/amp-script/hello-world.amp.html
+++ b/examples/amp-script/hello-world.amp.html
@@ -35,7 +35,7 @@
   <h1>Example: #local-script</h1>
   <amp-script width=400 height=100 script="local-script">
   </amp-script>
-  <script type="text/amp-script" id="local-script">
+  <script type="text/plain" target="amp-script" id="local-script">
     document.body.textContent = 'Hi there!';
   </script>
 
