--- a/extensions/amp-script/0.1/test/validator-amp-script.html
+++ b/extensions/amp-script/0.1/test/validator-amp-script.html
@@ -31,7 +31,7 @@
 <body>
   <!-- Valid: With 'script' attribute. -->
   <amp-script layout=container script=hello></amp-script>
-  <script type=text/amp-script id=hello>
+  <script type=text/plain target=amp-script id=hello>
     document.body.textContent = "Hello world!";
   </script>
 
@@ -45,19 +45,34 @@
   <!-- Invalid: With neither 'script' or 'src' attributes. -->
   <amp-script layout=container></amp-script>
 
-  <!-- Invalid: Local script with wrong type. -->
-  <script type=text/amp-js id=hello>
-    document.body.textContent = "Hello world!";
-  </script>
-
-  <!-- Invalid: Local script without 'id' attribute. -->
-  <script type=text/amp-script>
-    document.body.textContent = "Hello world!";
-  </script>
-
   <!-- Invalid: Relative URL. -->
   <amp-script layout=container src="/foo.js"></amp-script>
 
   <!-- Invalid: Non-https 'src' attribute. -->
   <amp-script layout=container src="http://not.https.url"></amp-script>
+
+  <!-- Invalid: Local script without 'target' or 'id' attributes. -->
+  <script type=text/plain>
+    document.body.textContent = "Hello World!";
+  </script>
+
+  <!-- Invalid: Local script with invalid 'type'. -->
+  <script type=text/amp-script target=amp-script id=hello>
+    document.body.textContent = "Hello World!";
+  </script>
+
+  <!-- Invalid: Local script with invalid 'target'. -->
+  <script type=text/plain target=amp-js id=hello>
+    document.body.textContent = "Hello World!";
+  </script>
+
+  <!-- Invalid: Local script without 'target' attribute. -->
+  <script type=text/plain id=hello>
+    document.body.textContent = "Hello World!";
+  </script>
+
+  <!-- Invalid: Local script without 'id' attribute. -->
+  <script type=text/plain target=amp-script>
+    document.body.textContent = "Hello World!";
+  </script>
 </body>
