Update e2e test fixture.

--- a/test/manual/amp-script/test1.amp.html
+++ b/test/manual/amp-script/test1.amp.html
@@ -24,7 +24,7 @@
 
   <amp-script id=local script=foo width=300 height=50>
   </amp-script>
-  <script type=text/amp-script id="foo">
+  <script type=text/plain target=amp-script id="foo">
     document.body.textContent = 'Hello World!';
   </script>
 </body>
