--- a/test/manual/loaders-new.amp.html
+++ b/test/manual/loaders-new.amp.html
@@ -336,6 +336,24 @@
             ></amp-img>
           </amp-iframe>
 
+          <h2>Small amp-iframe with image placeholder</h2>
+          <amp-iframe
+            sandbox="allow-scripts allow-forms allow-same-origin"
+            src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street%2C%20Dublin%2C%20Ireland+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed"
+            layout="fixed"
+            width="320"
+            height="50"
+          >
+            <amp-img
+              placeholder
+              src="https://picsum.photos/1600/900?image=314"
+              class="custom-loader-1"
+              layout="fixed"
+              width="320"
+              height="50"
+            ></amp-img>
+          </amp-iframe>
+
           <h2>Normal amp-iframe</h2>
 
           <amp-iframe
