Added responsive layout to amp-soundcloud and fixed some examples

--- a/extensions/amp-soundcloud/0.1/test/validator-amp-soundcloud.html
+++ b/extensions/amp-soundcloud/0.1/test/validator-amp-soundcloud.html
@@ -41,7 +41,7 @@
   <!-- invalid: bad trackid-->
   <amp-soundcloud height=166 data-trackid="mahler_number_6.ogg" data-visual="false"
                   layout="fixed-height"></amp-soundcloud>
-  <!-- invalid: bad layout -->
+  <!-- valid: responsive layout -->
   <amp-soundcloud height=166 width=42 data-trackid="243169232" data-visual="true"
                   layout="responsive"></amp-soundcloud>
   <!-- valid: classic mode with three letter color -->
