--- a/examples/amp-list.amp.html
+++ b/examples/amp-list.amp.html
@@ -43,7 +43,7 @@
     "items": [
       {
         "title": "amp-carousel",
-        "url": "https://ampbyexample.com/components/amp-carousel"
+        "url": "https://amp.dev/documentation/examples/components/amp-carousel/"
       },
       ...
     ]
